--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: linear-gradient(45deg, #080d3d 0%, #4c3299 100%);
+    background-image: linear-gradient(45deg, #030512 0%, #0a0517 100%);
     background-repeat: no-repeat;
     height: 100vh;
     height: 100svh;
@@ -22,7 +22,7 @@ main {
     height: 10rem;
 }
 
-.square {
+/* .square {
     position: absolute;
     height: 8rem;
     width: 8rem;
@@ -30,9 +30,9 @@ main {
     border-radius: 0.5rem;
     top: -2.5rem;
     left: -2.5rem;
-}
+} */
 
-.circle {
+/* .circle {
     position: absolute;
     height: 8rem;
     width: 8rem;
@@ -40,7 +40,7 @@ main {
     background-color: rgb(0, 182, 254);
     right: -1rem;
     bottom: -2.5rem;
-}
+} */
 
 .clock {
     text-align: center;
@@ -49,7 +49,7 @@ main {
     justify-content: center;
     gap: 5%;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.1);
+    backg
     backdrop-filter: blur(2rem);
     border-radius: 0.5rem;
     height: 100%;
